--- a/signup.html
+++ b/signup.html
@@ -48,6 +48,7 @@
                         <!-- Add more options as needed -->
                     </select>
                     <input type="number" name="" id="" class="phone" placeholder="Phone Number">
+                    <input type="text" name="" id="" class="forms">
             </div>
             </div>
             </div>
