--- a/signup.html
+++ b/signup.html
@@ -49,6 +49,9 @@
                     </select>
                     <input type="number" name="" id="" class="phone" placeholder="Phone Number">
                     <input type="email" name="" id="" class="forms longinp" placeholder="Email">
+                    <input type="password" name="" id="" class="forms longinp" placeholder="Set Paassword">
+
+                    <button>SignUp</button>
             </div>
             </div>
             </div>
