--- a/signup.html
+++ b/signup.html
@@ -49,9 +49,9 @@
                     </select>
                     <input type="number" name="" id="" class="phone" placeholder="Phone Number">
                     <input type="email" name="" id="" class="forms longinp" placeholder="Email">
-                    <input type="password" name="" id="" class="forms longinp" placeholder="Set Paassword">
+                    <input type="password" name="" id="" class="forms longinp" placeholder="Set Password">
 
-                    <button>SignUp</button>
+                    <button class="btn btn-danger w-75 mt-4 " onclick="Signup()">SignUp</button>
             </div>
             </div>
             </div>
