--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,7 @@
                 <input type="text" name="" id="firstname" class="forms" placeholder="First Name">
                 <input type="text" name="" id="lastname" class="forms" placeholder="Last Name">
                 <p class="dateofbirth">Date of Birth</p>
-                <input type="text" name="" id="day" class="date" placeholder="Day" min="1" max="31">
+                <input type="number" name="" id="day" class="date" placeholder="Day" min="1" max="31">
                 <input type="number" name="" id="month" class="date" placeholder="Month" min="1" max="12">
                 <input type="number" name="" id="year" class="date year" placeholder="Year" min="1980" max="2024">
                 <p class="dateofbirth">Country code</p>
@@ -49,7 +49,7 @@
                     <option value="+86">Philippines (+63)</option>
                     <!-- Add more options as needed -->
                 </select>
-                <input type="number" name="" id="phonenumber" class="phone" placeholder="Phone Number">
+                <input type="number" name="" id="phonenumber" class="phone" placeholder="Phone Number" maxlength="10">
                 <input type="email" name="" id="email" class="forms longinp" placeholder="Email">
                 <input type="password" name="" id="password" class="forms longinp" placeholder="Set Password">
                 <br>
