--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FLY-HI SignUp Page</title>
     <link rel="stylesheet" href="./bootstrap.css">
     <link rel="stylesheet" href="./signup.css">
 
@@ -15,7 +15,7 @@
         <img src="images/Screenshot_2024-04-23_094542-removebg-preview.png" alt="" class="logoimg">FLY-HI
 
         <div class="login-form">
-            <p class="redirect"><a href="#" style="color: red; text-decoration: none;">Login</a></p>
+            <p class="redirect"><a href="login.html" style="color: red; text-decoration: none;">Login</a></p>
             <div>
                 <p class="signup">Sign Up</p>
                 <input type="text" name="" id="firstname" class="forms" placeholder="First Name">
