--- a/login.html
+++ b/login.html
@@ -15,7 +15,8 @@
         <img src="images/Screenshot_2024-04-23_094542-removebg-preview.png" alt="" class="logoimg">FLY-HI
 
         <div class="login-form">
-            <p class="redirect"><a href="signup.html" style="color: red; text-decoration: none;">Sign Up</a></p>
+            <div>
+                <p class="redirect"><a href="signup.html" style="color: red; text-decoration: none;">Sign Up</a></p>
             <div>
                 <p class="signup">Log in</p>
                 <input type="text" name="" id="email" placeholder="Email" class="input">
@@ -24,6 +25,7 @@
                 <input type="password" name="" id="password" placeholder="Password" class="input">
                 
                 <button class="btn btn-danger w-75 mt-4 " onclick="Login()">Login</button>
+            </div>
             </div>
         </div>
     </div>
